k8s/deployments/gitlab/gitlab-service.yml
kind: Service
apiVersion: v1
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
  - name: ssh
    protocol: TCP
    port: 22
    nodePort: 31022
  selector:
    app: gitlab
  type: NodePort
  #type: LoadBalancer
  sessionAffinity: None
  #sessionAffinity: ClientIP
